--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "libp2p": "^0.29.3",
+    "libp2p-gossipsub": "^0.7.0",
+    "libp2p-kad-dht": "^0.20.1",
     "libp2p-mdns": "^0.15.0",
-    "peer-id": "^0.14.2"
+    "libp2p-mplex": "^0.10.1",
+    "libp2p-noise": "^2.0.1",
+    "libp2p-tcp": "^0.15.1",
+    "libp2p-websockets": "^0.14.0",
+    "peer-id": "^0.14.2",
+    "ws": "^7.4.0"
   }
 }
